@@ -14,7 +14,7 @@ cd src\libbson
 %CMAKE_MAKE_PROGRAM% install
 
 cd ..\..
-%CMAKE% -G "MinGW Makefiles" -DCMAKE_MAKE_PROGRAM=%CMAKE_MAKE_PROGRAM% -DCMAKE_PREFIX_PATH=%INSTALL_DIR% %CONFIGURE_FLAGS%
+%CMAKE% -G "MinGW Makefiles" -DCMAKE_MAKE_PROGRAM=%CMAKE_MAKE_PROGRAM% -DCMAKE_PREFIX_PATH=%INSTALL_DIR%\lib\cmake  %CONFIGURE_FLAGS%
 
 %CMAKE_MAKE_PROGRAM%
 %CMAKE_MAKE_PROGRAM% install
