@@ -125,7 +125,7 @@ cd src/libbson
 "$BUILD" $BUILD_FLAGS INSTALL.vcxproj
 cd ../..
 
-"$CMAKE" -G "$CC" "-DCMAKE_PREFIX_PATH=${INSTALL_DIR}" $CONFIGURE_FLAGS
+"$CMAKE" -G "$CC" "-DCMAKE_PREFIX_PATH=${INSTALL_DIR}/lib/cmake" $CONFIGURE_FLAGS
 "$BUILD" $BUILD_FLAGS ALL_BUILD.vcxproj
 "$BUILD" $BUILD_FLAGS INSTALL.vcxproj
 
