@@ -1,6 +1,5 @@
 EXTRA_DIST += \
 	build/cmake/FindSASL2.cmake \
-	build/cmake/FindBSON.cmake \
 	build/cmake/MongoCPackage.cmake \
 	build/cmake/libmongoc-1.0-config.cmake.in \
 	build/cmake/libmongoc-1.0-config-version.cmake.in \
