@@ -19,7 +19,27 @@ set (MONGOC_VERSION @MONGOC_VERSION@)
 
 find_package (libbson-1.0 "@MONGOC_MAJOR_VERSION@.@MONGOC_MINOR_VERSION@" REQUIRED)
 
-set (MONGOC_LIBRARIES mongoc-1.0 ${BSON_LIBRARIES})
+# In a pure-CMake project this is inserted by configure_package_config_file(),
+# but we want to be able to build this file the same from the Autotools, so
+# let's manually insert this code.
+get_filename_component(PACKAGE_PREFIX_DIR "${CMAKE_CURRENT_LIST_DIR}/../../../" ABSOLUTE)
+
+macro(set_and_check _var _file)
+  set(${_var} "${_file}")
+  if(NOT EXISTS "${_file}")
+    message(FATAL_ERROR "File or directory ${_file} referenced by variable ${_var} does not exist !")
+  endif()
+endmacro()
+
+set_and_check (MONGOC_INCLUDE_DIRS "${PACKAGE_PREFIX_DIR}/include/libmongoc-1.0")
+list (APPEND MONGOC_INCLUDE_DIRS ${BSON_INCLUDE_DIRS})
+
+# We want to provide an absolute path to the library and we know the
+# directory and the base name, but not the suffix, so we use CMake's
+# find_library() to pick that up.  Users can override this by configuring
+# MONGOC_LIBRARY themselves.
+find_library(MONGOC_LIBRARY mongoc-1.0 PATHS "${PACKAGE_PREFIX_DIR}/lib" NO_DEFAULT_PATH)
+set (MONGOC_LIBRARIES ${MONGOC_LIBRARY} ${BSON_LIBRARIES})
 
 # If this file is generated by the Autotools on Mac, SSL_LIBS might be
 # "-framework CoreFoundation -framework Security". Split into a CMake array
@@ -37,20 +57,4 @@ foreach (LIB @SASL_LIBS@ @SSL_LIBS@ @SHM_LIB@)
    endif ()
 endforeach ()
 
-# In a pure-CMake project this is inserted by configure_package_config_file(),
-# but we want to be able to build this file the same from the Autotools, so
-# let's manually insert this code.
-get_filename_component(PACKAGE_PREFIX_DIR "${CMAKE_CURRENT_LIST_DIR}/../../../" ABSOLUTE)
-
-macro(set_and_check _var _file)
-  set(${_var} "${_file}")
-  if(NOT EXISTS "${_file}")
-    message(FATAL_ERROR "File or directory ${_file} referenced by variable ${_var} does not exist !")
-  endif()
-endmacro()
-
-set_and_check (MONGOC_INCLUDE_DIRS "${PACKAGE_PREFIX_DIR}/include/libmongoc-1.0")
-set (MONGOC_INCLUDE_DIRS ${MONGOC_INCLUDE_DIRS} ${BSON_INCLUDE_DIRS})
-
-set_and_check (MONGOC_LIBRARY_DIRS "${PACKAGE_PREFIX_DIR}/lib")
-set (MONGOC_LIBRARY_DIRS ${MONGOC_LIBRARY_DIRS} ${BSON_LIBRARY_DIRS})
+set (MONGOC_DEFINITIONS ${BSON_DEFINITIONS})
