@@ -12,30 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set (MONGOC_MAJOR_VERSION @MONGOC_MAJOR_VERSION@)
-set (MONGOC_MINOR_VERSION @MONGOC_MINOR_VERSION@)
-set (MONGOC_MICRO_VERSION @MONGOC_MICRO_VERSION@)
-set (MONGOC_VERSION @MONGOC_VERSION@)
+set (MONGOC_STATIC_MAJOR_VERSION @MONGOC_MAJOR_VERSION@)
+set (MONGOC_STATIC_MINOR_VERSION @MONGOC_MINOR_VERSION@)
+set (MONGOC_STATIC_MICRO_VERSION @MONGOC_MICRO_VERSION@)
+set (MONGOC_STATIC_VERSION @MONGOC_VERSION@)
 
 find_package (libbson-static-1.0 "@MONGOC_MAJOR_VERSION@.@MONGOC_MINOR_VERSION@" REQUIRED)
-
-set (MONGOC_LIBRARIES mongoc-static-1.0 ${BSON_LIBRARIES})
-
-# If this file is generated by the Autotools on Mac, SSL_LIBS might be
-# "-framework CoreFoundation -framework Security". Split into a CMake array
-# like "-framework CoreFoundation;-framework Security".
-set (IS_FRAMEWORK_VAR 0)
-foreach (LIB @SASL_LIBS@ @SSL_LIBS@ @SHM_LIB@)
-   if (LIB STREQUAL "-framework")
-      set (IS_FRAMEWORK_VAR 1)
-      continue ()
-   elseif (IS_FRAMEWORK_VAR)
-      list (APPEND MONGOC_LIBRARIES "-framework ${LIB}")
-      set (IS_FRAMEWORK_VAR 0)
-   else ()
-      list (APPEND MONGOC_LIBRARIES ${LIB})
-   endif ()
-endforeach ()
 
 # In a pure-CMake project this is inserted by configure_package_config_file(),
 # but we want to be able to build this file the same from the Autotools, so
@@ -49,9 +31,30 @@ macro(set_and_check _var _file)
   endif()
 endmacro()
 
-set_and_check (MONGOC_INCLUDE_DIRS "${PACKAGE_PREFIX_DIR}/include/libmongoc-1.0")
-set (MONGOC_INCLUDE_DIRS ${MONGOC_INCLUDE_DIRS} ${BSON_INCLUDE_DIRS})
+set_and_check (MONGOC_STATIC_INCLUDE_DIRS "${PACKAGE_PREFIX_DIR}/include/libmongoc-1.0")
+list (APPEND MONGOC_STATIC_INCLUDE_DIRS ${BSON_STATIC_INCLUDE_DIRS})
 
-set_and_check (MONGOC_LIBRARY_DIRS "${PACKAGE_PREFIX_DIR}/lib")
-set (MONGOC_LIBRARY_DIRS ${MONGOC_LIBRARY_DIRS} ${BSON_LIBRARY_DIRS})
-add_definitions (-DMONGOC_STATIC)
+# We want to provide an absolute path to the library and we know the
+# directory and the base name, but not the suffix, so we use CMake's
+# find_library() to pick that up.  Users can override this by configuring
+# MONGOC_STATIC_LIBRARY themselves.
+find_library(MONGOC_STATIC_LIBRARY mongoc-static-1.0 PATHS "${PACKAGE_PREFIX_DIR}/lib" NO_DEFAULT_PATH)
+set (MONGOC_STATIC_LIBRARIES ${MONGOC_STATIC_LIBRARY} ${BSON_STATIC_LIBRARIES})
+
+# If this file is generated by the Autotools on Mac, SSL_LIBS might be
+# "-framework CoreFoundation -framework Security". Split into a CMake array
+# like "-framework CoreFoundation;-framework Security".
+set (IS_FRAMEWORK_VAR 0)
+foreach (LIB @SASL_LIBS@ @SSL_LIBS@ @SHM_LIB@)
+   if (LIB STREQUAL "-framework")
+      set (IS_FRAMEWORK_VAR 1)
+      continue ()
+   elseif (IS_FRAMEWORK_VAR)
+      list (APPEND MONGOC_STATIC_LIBRARIES "-framework ${LIB}")
+      set (IS_FRAMEWORK_VAR 0)
+   else ()
+      list (APPEND MONGOC_STATIC_LIBRARIES ${LIB})
+   endif ()
+endforeach ()
+
+set (MONGOC_STATIC_DEFINITIONS MONGOC_STATIC ${BSON_STATIC_DEFINITIONS})
